--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -3,9 +3,8 @@ name: Sync Upstream
 env:
   # Required, URL to upstream (fork base)
   UPSTREAM_URL: "https://github.com/runelite/runelite"
-  # Required, token to authenticate bot, could use ${{ secrets.GITHUB_TOKEN }} 
-  # Over here, we use a PAT instead to authenticate workflow file changes.
-  WORKFLOW_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
+  # Required, token to authenticate bot
+  WORKFLOW_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   # Optional, defaults to main
   UPSTREAM_BRANCH: "master"
   # Optional, defaults to UPSTREAM_BRANCH
