--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -1,28 +1,17 @@
-name: Sync Upstream
+name: Sync Fork
 
-env:
-  # Required, URL to upstream (fork base)
-  UPSTREAM_URL: "https://github.com/runelite/runelite"
-  # Required, token to authenticate bot
-  WORKFLOW_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  # Optional, defaults to main
-  UPSTREAM_BRANCH: "master"
-  # Optional, defaults to UPSTREAM_BRANCH
-  DOWNSTREAM_BRANCH: "master"
-
-# This runs every day on 1801 UTC
 on:
   schedule:
-    - cron: '1 18 * * *'
+    - cron: '*/30 * * * *' # every 30 minutes
+  workflow_dispatch: # on button click
 
 jobs:
-  build:
+  sync:
+
     runs-on: ubuntu-latest
+
     steps:
-      - name: GitHub Sync to Upstream Repository
-        uses: dabreadman/sync-upstream-repo@v1.3.0
-        with: 
-          upstream_repo: ${{ env.UPSTREAM_URL }}
-          upstream_branch: ${{ env.UPSTREAM_BRANCH }}
-          downstream_branch: ${{ env.DOWNSTREAM_BRANCH }}
-          token: ${{ env.WORKFLOW_TOKEN }}
+      - uses: tgymnich/fork-sync@v1.8
+        with:
+          base: master
+          head: master
